--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
+    "mern-noteapp": "file:..",
     "mongodb": "^6.20.0",
     "mongoose": "^7.0.3"
   },
